feat: Implement organization and patient management features
- Added organization handler, service, repository, and helper functions for creating, listing, and retrieving organizations.
- Introduced patient handler, service, and repository for managing patient records, including create, update, delete, and list functionalities.
- Implemented schema management for organizations, ensuring dedicated schemas for each organization.
- Enhanced permissions.yml to include roles and permissions for organization and patient management.
- Removed deprecated organization files from the previous structure.

--- a/permissions.yml
+++ b/permissions.yml
@@ -1,16 +1,44 @@
 roles:
   SUPER_ADMIN:
-    - organization:create
-    - organization:manage
-    - organization:view
+    - organization:create #faizan
+    - organization:manage #faizan
+    - organization:view #faizan
+    - organization:update #faizan
+    - organization:delete #faizan
+    
+    - patient:create  #faizan
+    - patient:view #faizan
+    - patient:update #faizan
+    - patient:delete #faizan
+
+    - caregiver:create #faizan
+    - caregiver:view #faizan
+    - caregiver:update #faizan
+    - caregiver:delete #faizan 
+
 
   ORG_ADMIN:
-    - organization:view
-    - user:manage
+    - organization:view #faizan
+    
+    - patient:view #faizan
+    - patient:create  #faizan
+    - patient:update  #faizan
+    - patient:delete  #faizan
+
+    - caregiver:create #faizan
+    - caregiver:update #faizan
+    - caregiver:delete #faizan
+    - caregiver:view #faizan
+    
     - nfc:assign
     - care-session:report
 
   CAREGIVER:
+    - patient:view  #faizan
+    
+    - caregiver:view #faizan
+    - caregiver:update #faizan
+
     - nfc:check-in
     - nfc:check-out
     - care-session:create
@@ -18,6 +46,11 @@ roles:
     - care-session:read
 
   PATIENT:
+    - patient:view  #faizan
+    - patient:update  #faizan  
+
+    - caregiver:view  #faizan
+
     - care-session:read
 
   MUNICIPALITY:
