fix: Update service references from 'organisation' to 'organization' and clean up code

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
-  organisation-service:
+  organization-service:
     build: .
-    container_name: organisation-service
+    container_name: organization-service
     env_file:
       - .env
     ports:
