Refactor patient creation to separate first and last name fields
- Updated CreatePatientRequest to replace FullName with FirstName and LastName.
- Modified CreatePatient handler to validate FirstName and LastName separately.
- Adjusted repository methods to handle new FirstName and LastName fields.
- Updated service layer to reflect changes in patient creation logic.

---

Implement user management functionality

- Added user creation, retrieval, updating, and deletion endpoints.
- Introduced CreateUserRequest and UpdateUserRequest models for user data.
- Implemented user repository methods for database interactions.
- Integrated Keycloak for user management and role assignments.
- Added error handling for user-related operations.

---

Enhance permissions for user management

- Updated permissions.yml to include user management roles: create, view, update, and delete.

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,19 @@
-DB_HOST=
+DB_HOST=wailsalutem-postgres
 DB_PORT=5432
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
+DB_NAME=wailsalutem-local
+DB_USER=localadmin
+DB_PASSWORD=Stoplying!
+DB_DSN=postgres://localadmin:Stoplying!@wailsalutem-postgres:5432/wailsalutem-local?sslmode=disable
 
 RABBITMQ_HOST=
 RABBITMQ_PORT=5672
 RABBITMQ_USER=
 RABBITMQ_PASSWORD=
+
+# Keycloak Configuration (no /admin suffix)
+KEYCLOAK_BASE_URL=https://keycloak-dev.example.com
+KEYCLOAK_REALM=wailsalutem
+
+# Keycloak Admin Client Credentials for User Management
+KEYCLOAK_ADMIN_CLIENT_ID=wailsalutem-admin
+KEYCLOAK_ADMIN_CLIENT_SECRET=your-client-secret-here
