--- a/permissions.yml
+++ b/permissions.yml
@@ -11,6 +11,11 @@ roles:
     - patient:update
     - patient:delete
 
+    - user:create
+    - user:view
+    - user:update
+    - user:delete
+
   ORG_ADMIN:
     - organization:view
     
@@ -18,6 +23,11 @@ roles:
     - patient:create
     - patient:update
     - patient:delete
+    
+    - user:create
+    - user:view
+    - user:update
+    - user:delete
     
     - nfc:assign
     - care-session:report
