chore: Add RabbitMQ service to docker-compose
- Add RabbitMQ 3 with management UI
- Configure default credentials (admin/admin123)
- Add health check for startup dependency
- Expose ports 5672 (AMQP) and 15672 (Management)
- Add persistent volume for message durability

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,21 @@
 services:
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: wailsalutem-rabbitmq
+    ports:
+      - "5672:5672"   # AMQP port
+      - "15672:15672" # Management UI
+    environment:
+      RABBITMQ_DEFAULT_USER: admin
+      RABBITMQ_DEFAULT_PASS: admin123
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
+    healthcheck:
+      test: ["CMD", "rabbitmq-diagnostics", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
   organization-service:
     build: .
     container_name: organization-service
@@ -6,3 +23,11 @@ services:
       - .env
     ports:
       - "8080:8080"
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+    environment:
+      RABBITMQ_URL: amqp://admin:admin123@rabbitmq:5672/
+
+volumes:
+  rabbitmq_data:
