feat: implement database migration scripts and organization schema setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,8 +26,8 @@ services:
     depends_on:
       rabbitmq:
         condition: service_healthy
-    environment:
-      RABBITMQ_URL: amqp://admin:admin123@rabbitmq:5672/
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
 volumes:
   rabbitmq_data:
