--- a/k8s/base/route.yml
+++ b/k8s/base/route.yml
@@ -8,6 +8,6 @@ spec:
     kind: Service
     name: organization-service
   port:
-    targetPort: 80
+    targetPort: http
   tls:
     termination: edge
