fix(deployment): correct image path in organization-service container configuration

--- a/k8s/base/deployment.yml
+++ b/k8s/base/deployment.yml
@@ -15,7 +15,8 @@ spec:
     spec:
       containers:
         - name: organization-service
-          image: image-registry.openshift-image-registry.svc:5000/wailsalutem-suite/organization-service/organization-service:latest
+          image: image-registry.openshift-image-registry.svc:5000/wailsalutem-suite/organization-service:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 8080
           envFrom:
