--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,59 +1,21 @@
-name: Build and Deploy to OpenShift
+name: Build & Deploy (OKD)
 
 on:
   push:
-    branches: 
-      - main
-  pull_request:
-    branches: 
-      - main
+    branches: [main]
 
 env:
-  OPENSHIFT_SERVER: ${{ secrets.OPENSHIFT_SERVER }}
-  OPENSHIFT_TOKEN: ${{ secrets.OPENSHIFT_TOKEN }}
-  OPENSHIFT_NAMESPACE: ${{ secrets.OPENSHIFT_NAMESPACE }}
   APP_NAME: organization-service
 
 jobs:
-  # Detect what changed to optimize build
-  changes:
+  deploy:
     runs-on: ubuntu-latest
-    outputs:
-      code: ${{ steps.filter.outputs.code }}
-      k8s: ${{ steps.filter.outputs.k8s }}
-      docs: ${{ steps.filter.outputs.docs }}
     steps:
       - uses: actions/checkout@v4
-      
-      - uses: dorny/paths-filter@v3
-        id: filter
         with:
-          filters: |
-            code:
-              - 'cmd/**'
-              - 'internal/**'
-              - 'Dockerfile'
-              - 'go.mod'
-              - 'go.sum'
-              - 'permissions.yml'
-            k8s:
-              - 'k8s/**'
-            docs:
-              - '**.md'
-              - 'docs/**'
-              - '.gitignore'
-              - 'LICENSE'
-              - 'api-documentation.yaml'
+          fetch-depth: 0
 
-  # Build image in OpenShift (only if code changed)
-  build:
-    needs: changes
-    if: needs.changes.outputs.code == 'true'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install OpenShift CLI
+      - name: Install oc
         run: |
           curl -LO https://mirror.openshift.com/pub/openshift-v4/clients/oc/latest/linux/oc.tar.gz
           tar -xzf oc.tar.gz
@@ -62,14 +24,52 @@ jobs:
 
       - name: Login to OpenShift
         run: |
-          oc login ${{ env.OPENSHIFT_SERVER }} \
-            --token=${{ env.OPENSHIFT_TOKEN }} \
+          oc login "${{ secrets.OPENSHIFT_SERVER }}" \
+            --token="${{ secrets.OPENSHIFT_TOKEN }}" \
             --insecure-skip-tls-verify=true
+          oc project "${{ secrets.OPENSHIFT_NAMESPACE }}"
 
-      - name: Switch to project
-        run: oc project ${{ env.OPENSHIFT_NAMESPACE }}
+      - name: Detect changed paths
+        id: changes
+        run: |
+          BASE_SHA="${{ github.event.before }}"
+          HEAD_SHA="${{ github.sha }}"
+          
+          # Handle first push case
+          if [ "$BASE_SHA" = "0000000000000000000000000000000000000000" ]; then
+            echo "First push detected, assuming all changed"
+            echo "k8s_changed=true" >> $GITHUB_OUTPUT
+            echo "code_changed=true" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+          
+          CHANGED="$(git diff --name-only "$BASE_SHA" "$HEAD_SHA" || echo "")"
+          echo "Changed files:"
+          echo "$CHANGED"
+
+          # Check if k8s manifests changed
+          if echo "$CHANGED" | grep -qE '^k8s/'; then
+            echo "k8s_changed=true" >> $GITHUB_OUTPUT
+          else
+            echo "k8s_changed=false" >> $GITHUB_OUTPUT
+          fi
+
+          # Check if code changed
+          if echo "$CHANGED" | grep -qE '^(cmd/|internal/|Dockerfile|go\.mod|go\.sum|permissions\.yml)'; then
+            echo "code_changed=true" >> $GITHUB_OUTPUT
+          else
+            echo "code_changed=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Apply Kubernetes manifests (if changed)
+        if: steps.changes.outputs.k8s_changed == 'true'
+        run: |
+          echo "Applying Kubernetes manifests..."
+          oc apply -f k8s/config/
+          oc apply -f k8s/base/
 
       - name: Create BuildConfig if not exists
+        if: steps.changes.outputs.code_changed == 'true'
         run: |
           if ! oc get bc/${{ env.APP_NAME }} 2>/dev/null; then
             echo "Creating BuildConfig..."
@@ -81,62 +81,25 @@ jobs:
             echo "BuildConfig already exists"
           fi
 
-      - name: Build image in OpenShift
+      - name: Trigger OpenShift build (if code changed)
+        if: steps.changes.outputs.code_changed == 'true'
         run: |
-          echo "Starting build with source code..."
+          echo "🔨 Building new image..."
           oc start-build ${{ env.APP_NAME }} \
             --from-dir=. \
             --follow \
             --wait
 
       - name: Tag image with commit SHA
+        if: steps.changes.outputs.code_changed == 'true'
         run: |
           oc tag ${{ env.APP_NAME }}:latest ${{ env.APP_NAME }}:${{ github.sha }}
           echo "Image tagged: ${{ env.APP_NAME }}:${{ github.sha }}"
 
-  # Deploy (runs if code OR k8s config changed)
-  deploy:
-    needs: [changes, build]
-    if: |
-      always() && 
-      (needs.changes.outputs.code == 'true' || needs.changes.outputs.k8s == 'true') &&
-      needs.build.result != 'failure'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install OpenShift CLI
+      - name: Rollout restart deployment
+        if: steps.changes.outputs.code_changed == 'true' || steps.changes.outputs.k8s_changed == 'true'
         run: |
-          curl -LO https://mirror.openshift.com/pub/openshift-v4/clients/oc/latest/linux/oc.tar.gz
-          tar -xzf oc.tar.gz
-          sudo mv oc /usr/local/bin/oc
-
-      - name: Login to OpenShift
-        run: |
-          oc login ${{ env.OPENSHIFT_SERVER }} \
-            --token=${{ env.OPENSHIFT_TOKEN }} \
-            --insecure-skip-tls-verify=true
-
-      - name: Switch to project
-        run: oc project ${{ env.OPENSHIFT_NAMESPACE }}
-
-      - name: Apply ConfigMaps and Secrets
-        run: |
-          echo "Applying configs..."
-          oc apply -f k8s/config/configmap.yml
-          oc apply -f k8s/config/secret.yml
-
-      - name: Apply Deployment and Services
-        run: |
-          echo "Applying deployment manifests..."
-          oc apply -f k8s/base/deployment.yml
-          oc apply -f k8s/base/service.yml
-          oc apply -f k8s/base/route.yml
-
-      - name: Rollout restart (if code changed)
-        if: needs.changes.outputs.code == 'true'
-        run: |
-          echo "Rolling out new deployment..."
+          echo "Rolling out deployment..."
           oc rollout restart deployment/${{ env.APP_NAME }}
           oc rollout status deployment/${{ env.APP_NAME }} --timeout=5m
 
@@ -157,4 +120,4 @@ jobs:
       - name: Get application URL
         run: |
           APP_URL=$(oc get route ${{ env.APP_NAME }} -o jsonpath='{.spec.host}')
-          echo "🚀 Application deployed at: https://$APP_URL"
+          echo "Application deployed at: https://$APP_URL"
