--- a/k8s/config/configmap.yml
+++ b/k8s/config/configmap.yml
@@ -16,3 +16,5 @@ data:
   KEYCLOAK_REALM: wailsalutem
   KEYCLOAK_API_CLIENT_ID: wailsalutem-api
   KEYCLOAK_ADMIN_CLIENT_ID: wailsalutem-admin
+  
+  ALLOWED_ORIGINS: "http://localhost:3000,https://wailsalutem-web-ui.netlify.app"
