--- a/k8s/base/deployment.yml
+++ b/k8s/base/deployment.yml
@@ -4,7 +4,7 @@ metadata:
   name: organization-service
   namespace: wailsalutem-suite
 spec:
-  replicas: 1
+  replicas: 2  # Initial replica count - HPA will manage scaling
   selector:
     matchLabels:
       app: organization-service
@@ -19,8 +19,33 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
+              name: http
+              protocol: TCP
           envFrom:
             - configMapRef:
                 name: wailsalutem-backend-config
             - secretRef:
                 name: wailsalutem-backend-secrets
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "128Mi"
+            limits:
+              cpu: "500m"
+              memory: "512Mi"
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 3
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 10
+            periodSeconds: 5
+            timeoutSeconds: 3
+            failureThreshold: 3
