feat: add organization:view permission for MUNICIPALITY and INSURER roles in permissions.yml

--- a/permissions.yml
+++ b/permissions.yml
@@ -50,6 +50,9 @@ roles:
 
   MUNICIPALITY:
     - care-session:report
+    - organization:view
+
 
   INSURER:
+    - organization:view
     - care-session:report
