feat: add user:view and patient:view permissions for CAREGIVER, MUNICIPALITY, and INSURER roles in permissions.yml

--- a/permissions.yml
+++ b/permissions.yml
@@ -35,9 +35,11 @@ roles:
 
   CAREGIVER:
     - patient:view
+    - user:view
 
     - nfc:check-in
     - nfc:check-out
+
     - care-session:create
     - care-session:update
     - care-session:read
@@ -50,9 +52,17 @@ roles:
 
   MUNICIPALITY:
     - care-session:report
+
     - organization:view
+
+    - patient:view
+    - user:view
 
 
   INSURER:
     - organization:view
+
     - care-session:report
+
+    - patient:view
+    - user:view
