Add OpenTelemetry environment configuration
- Add OTEL environment variables to .env.example
- Update docker-compose.yml with OTEL configuration
- Configure service name, namespace, version
- Set OTLP endpoint and sampling strategy

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,28 @@
-DB_HOST=wailsalutem-postgres
+# Database Configuration
+DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=wailsalutem-local
-DB_USER=localadmin
-DB_PASSWORD=Stoplying!
-DB_DSN=postgres://localadmin:Stoplying!@wailsalutem-postgres:5432/wailsalutem-local?sslmode=disable
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_NAME=organization_db
 
-RABBITMQ_HOST=
-RABBITMQ_PORT=5672
-RABBITMQ_USER=
-RABBITMQ_PASSWORD=
-
-# Keycloak Configuration (no /admin suffix)
-KEYCLOAK_BASE_URL=https://keycloak-dev.example.com
+# Keycloak Configuration
+KEYCLOAK_BASE_URL=http://localhost:8180
 KEYCLOAK_REALM=wailsalutem
+KEYCLOAK_ADMIN_CLIENT_ID=admin-cli
+KEYCLOAK_ADMIN_CLIENT_SECRET=your-client-secret
 
-# Keycloak Admin Client Credentials for User Management
-KEYCLOAK_ADMIN_CLIENT_ID=wailsalutem-admin
-KEYCLOAK_ADMIN_CLIENT_SECRET=your-client-secret-here
+# RabbitMQ Configuration
+RABBITMQ_URL=amqp://admin:admin123@localhost:5672/
+
+# OpenTelemetry Configuration
+OTEL_EXPORTER_OTLP_ENDPOINT=localhost:4317
+OTEL_SERVICE_NAME=organization-service
+OTEL_SERVICE_NAMESPACE=wailsalutem
+OTEL_SERVICE_VERSION=1.0.0
+ENVIRONMENT=production
+OTEL_TRACES_SAMPLER=always_on
+OTEL_METRICS_EXPORT_INTERVAL=30s
+
+# Application Configuration
+PORT=8080
+TZ=CET
