Add OpenTelemetry configuration to Kubernetes deployment
Added missing OpenTelemetry environment variables to ConfigMap:
- OTEL_EXPORTER_OTLP_ENDPOINT: Points to Tempo collector
- OTEL_SERVICE_NAME, NAMESPACE, VERSION: Service identification
- OTEL_TRACES_SAMPLER: Set to always_on for full trace collection
- OTEL_METRICS_EXPORT_INTERVAL: 30s metric export interval

This enables the service to send traces and metrics to the observability stack.

Also added deployment helper scripts:
- deploy-observability-fix.sh: Deploy and restart service
- check-observability-status.sh: Verify observability configuration

--- a/k8s/config/configmap.yml
+++ b/k8s/config/configmap.yml
@@ -18,3 +18,12 @@ data:
   KEYCLOAK_ADMIN_CLIENT_ID: wailsalutem-admin
   
   ALLOWED_ORIGINS: "http://localhost:3000,https://wailsalutem-web-ui.netlify.app"
+  
+  # OpenTelemetry Configuration
+  OTEL_EXPORTER_OTLP_ENDPOINT: "tempo.observability.svc.cluster.local:4317"
+  OTEL_SERVICE_NAME: "organization-service"
+  OTEL_SERVICE_NAMESPACE: "wailsalutem"
+  OTEL_SERVICE_VERSION: "1.0.0"
+  ENVIRONMENT: "production"
+  OTEL_TRACES_SAMPLER: "always_on"
+  OTEL_METRICS_EXPORT_INTERVAL: "30s"
