Update permissions.yml to include patient:update role

--- a/permissions.yml
+++ b/permissions.yml
@@ -55,9 +55,10 @@ roles:
 
     - organization:view
 
-    - patient:view
     - user:view
 
+    - patient:view
+    - patient:update
 
   INSURER:
     - organization:view
